Tue Jan 13 17:50:07 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* fixed a bug introduced with the creation of the 'execute command
	  on disconnect' option

	* CD is by default off. It doesn't work on my internal modem 
	  and I suspect it might not even work on most (all) internal modems ..

Tue Jan 13 12:02:33 1998  Mario Weilguni <mweilguni@sime.com>
	* the PAP authentication file is now created in the users
	  homedirectory. Otherwise I'd have to create the directory 
	  myself and fix the permissions if kppp runs suid root - 
	  I'm too lazy for that.

	* fixed a security bug in connect.cpp, a typical buffer
	  overflow. Very bad for setuid root programs

Thu Jan 13 06:58:29 1998  Peter Silva <peter.silva@videotron.ca>

	* make new behaviour optional (in response to Bernd's worry 
	  about cheap modems.)

Thu Jan 13 06:58:29 1998  Peter Silva <peter.silva@videotron.ca>

	* patch to prevent kppp hang if modem is off when connecting.


Tue Jan 13 02:48:55 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* applied BSD patch from Alex <garbanzo@hooked.net>
	  (just a few missing includes)

	* various fixes and geometry improvements

	* added a linedit for a command to be executed on disconnect
	

Mon Jan 12 17:18:41 1998  Mario Weilguni  <mweilguni@sime.com>

	* username and password are now remembered between
	session. Remembering the password can be switched off for each
	account.

	* connect.cpp: fixed 2 security bugs in lockfile(). Not it's
	checked if the lockfile is a regular file and no more than
	32 characters are read from this file, no matter how long it is.

	* Added PAP authentication option and code. Using PAP (at least
	client-side-authentication should now be VERY easy. Sorry,
	no CHAP support so far.
	
	* edit.cpp: Added a checkbox if to use kppp's default script.
	If this checkbox is checked, all scriptedit controls are disabled.

Sun Jan 11 21:03:00 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>
